--- a/sass/partials/search/_search.scss
+++ b/sass/partials/search/_search.scss
@@ -338,8 +338,12 @@ h2 {
   float: right;
   position: relative;
   p {
+    background: #FFF;
+    border: 1px solid #CCC;
+    border-radius: 4px;
     display: none;
     font-size: 12px;
+    padding: 7px;
     position: absolute;
     top: 10px;
   }
